--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: '20'
       - name: Make the script files executable
-        run: chmod +x ./.github/workflows/script.sh
+        run: chmod +x sadwivedi-suncor/ResuableWF/.github/workflows/script.sh
       - name: Run a script
         env:
           cf_user: ${{ secrets.CF_USER }}
