--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -12,7 +12,8 @@ jobs:
         with:
           node-version: '20'
       - name: Make the script files executable
-        run: chmod +x ./script.sh
+        run: chmod +x script.sh
+        shell: bash
       - name: Run a script
         env:
           cf_user: ${{ secrets.CF_USER }}
@@ -20,4 +21,5 @@ jobs:
           cf_api_url: ${{vars.CF_API_URL}}
           cf_org: ${{vars.CF_ORG}}
           cf_space: ${{vars.CF_SPACE}}
-        run: ./script.sh
+        run: script.sh
+        shell: bash
